--- a/Pyhton/templates/registrar.html
+++ b/Pyhton/templates/registrar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Registro de Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -14,8 +14,12 @@
 
     <div class="flex justify-center items-center min-h-screen">
         <div class="bg-white text-gray-900 rounded-lg shadow-lg p-6 max-w-md w-full">
-            <h2 class="text-2xl font-bold mb-6 text-center text-blue-900">Iniciar Sesión</h2>
-            <form method="POST" action="{{ url_for('login') }}" class="space-y-4">
+            <h2 class="text-2xl font-bold mb-6 text-center text-blue-900">Registro de Usuario</h2>
+            <form method="POST" action="{{ url_for('register') }}" class="space-y-4">
+                <div class="mb-4">
+                    <label for="nombre" class="block mb-2 text-sm font-medium text-gray-900">Nombre</label>
+                    <input type="text" id="nombre" name="nombre" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="John Doe" required />
+                </div>
                 <div class="mb-4">
                     <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Correo Electrónico</label>
                     <input type="email" id="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="name@example.com" required />
@@ -26,12 +30,11 @@
                 </div>
                 <div class="flex items-start mb-4">
                     <div class="flex items-center h-5">
-                        <input id="remember" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300" />
+                        <input id="remember" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300" required />
                     </div>
                     <label for="remember" class="ml-2 text-sm font-medium text-gray-900">Recordar</label>
                 </div>
-                <button type="submit" class="text-white bg-orange-400 hover:bg-orange-500 text-whit focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full px-5 py-2.5 text-center">Iniciar Sesión</button>
-                <a href="{{ url_for('register') }}">Registrarse</a>
+                <button type="submit" class="text-white bg-orange-400 hover:bg-orange-500 text-whit focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full px-5 py-2.5 text-center">Registrar</button>
             </form>
         </div>
     </div>
