--- a/Pyhton/templates/menu.html
+++ b/Pyhton/templates/menu.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Bienvenido</h1>
     <a href="{{ url_for('survey') }}">Iniciar Encuesta</a>
-    <a href="{{ url_for('graf') }}">Ver Grafica</a>
+    <a href="{{ url_for('graficar') }}">Ver Grafica</a>
 </body>
 </html>
