--- a/Pyhton/templates/registro.html
+++ b/Pyhton/templates/registro.html
@@ -15,7 +15,7 @@
     <div class="flex justify-center items-center min-h-screen">
         <div class="bg-white text-gray-900 rounded-lg shadow-lg p-6 max-w-md w-full">
             <h2 class="text-2xl font-bold mb-6 text-center text-blue-900">Registro de Usuario</h2>
-            <form method="POST" action="{{ url_for('registro') }}" class="space-y-4">
+            <form method="POST" action="{{ url_for('register') }}" class="space-y-4">
                 <div class="mb-4">
                     <label for="nombre" class="block mb-2 text-sm font-medium text-gray-900">Nombre</label>
                     <input type="text" id="nombre" name="nombre" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="John Doe" required />
