--- a/Pyhton/templates/resul.html
+++ b/Pyhton/templates/resul.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Resultados</title>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/estilo2.css') }}">
 </head>
+<div class="absolute inset-0 z-0 pointer-events-none"></div>
+    <div id="blob1" class="blob bg-gradient-to-r from-orange-400 to-pink-500 opacity-30 rounded-full w-48 h-48 blur-3xl absolute top-10 left-10"></div>
+    <div id="blob2" class="blob bg-gradient-to-r from-purple-400 to-indigo-500 opacity-30 rounded-full w-40 h-40 blur-3xl absolute top-40 right-10"></div>
+    <div id="blob3" class="blob bg-gradient-to-r from-green-400 to-teal-500 opacity-30 rounded-full w-52 h-52 blur-3xl absolute bottom-10 left-40"></div>
+    <div id="blob4" class="blob bg-gradient-to-r from-pink-400 to-indigo-500 opacity-30 rounded-full w-44 h-44 blur-3xl absolute top-20 right-40"></div>
+    <div id="blob5" class="blob bg-gradient-to-r from-blue-400 to-teal-500 opacity-30 rounded-full w-56 h-56 blur-3xl absolute bottom-20 right-20"></div>
+    <div id="blob6" class="blob bg-gradient-to-r from-yellow-400 to-red-500 opacity-30 rounded-full w-40 h-40 blur-3xl absolute top-30 left-60"></div>
+    <div id="blob7" class="blob bg-gradient-to-r from-cyan-400 to-purple-500 opacity-30 rounded-full w-48 h-48 blur-3xl absolute bottom-20 right-60"></div>
+    <div id="blob8" class="blob bg-gradient-to-r from-red-400 to-yellow-500 opacity-30 rounded-full w-44 h-44 blur-3xl absolute top-70 left-30"></div>
+    <div id="blob9" class="blob bg-gradient-to-r from-green-400 to-blue-500 opacity-30 rounded-full w-50 h-50 blur-3xl absolute top-50 right-30"></div>
+    <div id="blob10" class="blob bg-gradient-to-r from-purple-400 to-orange-500 opacity-30 rounded-full w-46 h-46 blur-3xl absolute bottom-40 left-80"></div>
+</div>
 <body>
-    <h1>Resultados</h1>
-    <img src="{{ plot_url }}" alt="Gráfica de araña">
+
+    <body class="bg-gradient-to-r from-blue-900 to-blue-700 text-white">
+        <div class="brutalist-card mt-12">
+            <div class="brutalist-card__header">
+                <div class="brutalist-card__icon">
+                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"></path>
+                    </svg>
+                </div>
+                <div class="brutalist-card__alert">Resultados</div>
+            </div>
+            <div class="brutalist-card__message">
+                <img src="{{ plot_url }}" alt="Gráfica de araña" style="max-width: 100%; height: auto;">
+            </div>
+            <div class="brutalist-card__actions">
+                <a class="brutalist-card__button brutalist-card__button--mark" href="{{ url_for('menu') }}">Volver</a>
+            </div>
+        </div>
+    
+
+        <footer class="text-center py-64">
+            <p>© 2024 TESJi</p>
+        </footer>
 </body>
 </html>
