Correccion de errores

--- a/Pyhton/templates/menu.html
+++ b/Pyhton/templates/menu.html
@@ -39,7 +39,7 @@
                 <span>A</span>
             </div>
         </a>
-        <a href="{{ url_for('graficar') }}" class="btn-53 mt-64 inline-block">
+        <a href="{{ url_for('results') }}" class="btn-53 mt-64 inline-block">
             <div class="original">Ver Gráfica</div>
             <div class="letters">
                 <span>V</span>
