--- a/Pyhton/templates/index.html
+++ b/Pyhton/templates/index.html
@@ -35,10 +35,10 @@
             <p class="text-2xl">Averigua cómo aprendes</p>
 
             <div class="mt-6 flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-                <a href="{{ url_for('sesion') }}" class="bg-orange-400 hover:bg-orange-500 text-white font-bold py-3 px-6 rounded w-full md:w-auto">
+                <a href="{{ url_for('lg') }}" class="bg-orange-400 hover:bg-orange-500 text-white font-bold py-3 px-6 rounded w-full md:w-auto">
                     Iniciar Sesión
                 </a>
-                <a href="{{ url_for('rg') }}" class="bg-orange-400 hover:bg-orange-500 text-white font-bold py-3 px-6 rounded w-full md:w-auto">
+                <a href="{{ url_for('register') }}" class="bg-orange-400 hover:bg-orange-500 text-white font-bold py-3 px-6 rounded w-full md:w-auto">
                     Registrarse
                 </a>
             </div>
